[build-system]
requires = ["poetry-core>=1.4.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "flwr"
version = "1.18.0"
description = "Flower: A Friendly Federated AI Framework"
license = "Apache-2.0"
authors = ["The Flower Authors <hello@flower.ai>"]
readme = "README.md"
homepage = "https://flower.ai"
repository = "https://github.com/adap/flower"
documentation = "https://flower.ai"
keywords = [
    "Artificial Intelligence",
    "Federated AI",
    "Federated Analytics",
    "Federated Evaluation",
    "Federated Learning",
    "Flower",
    "Machine Learning",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
packages = [{ include = "flwr", from = "py" }]
exclude = ["py/**/*_test.py"]

[tool.poetry.scripts]
# `flwr` CLI
flwr = "flwr.cli.app:app"
# Simulation Engine
flwr-simulation = "flwr.simulation.app:flwr_simulation"
flower-simulation = "flwr.simulation.run_simulation:run_simulation_from_cli"
# Deployment Engine
flower-superlink = "flwr.server.app:run_superlink"
flower-supernode = "flwr.client.supernode.app:run_supernode"
flwr-serverapp = "flwr.server.serverapp:flwr_serverapp"
flwr-clientapp = "flwr.client.clientapp:flwr_clientapp"

[tool.poetry.dependencies]
python = "^3.9.2"
# Mandatory dependencies
numpy = ">=1.26.0,<3.0.0"
grpcio = "^1.62.3,!=1.65.0"
protobuf = "^4.21.6"
cryptography = "^44.0.1"
pycryptodome = "^3.18.0"
iterators = "^0.0.2"
typer = "^0.12.5"
tomli = "^2.0.1"
tomli-w = "^1.0.0"
pathspec = "^0.12.1"
rich = "^13.5.0"
pyyaml = "^6.0.2"
requests = "^2.31.0"
# Optional dependencies (Simulation Engine)
ray = { version = "==2.31.0", optional = true, python = ">=3.9,<3.13" }
# Optional dependencies (REST transport layer)
starlette = { version = "^0.45.2", optional = true }
uvicorn = { version = "^0.34.0", extras = ["standard"], optional = true }

[tool.poetry.extras]
simulation = ["ray"]
rest = ["starlette", "uvicorn"]

[tool.poetry.group.dev.dependencies]
devtool = { path = "../dev" }
docsig = "==0.64.0"

[tool.docstrfmt]
extend_exclude = [
    "docs/source/conf.py",
    "docs/source/tutorial-quickstart-huggingface.rst",
    "docs/source/_templates/autosummary/*",
    "docs/source/ref-api/*",
]

[tool.isort]
profile = "black"
known_first_party = ["flwr", "flwr_tool"]

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311"]

[tool.pylint."MESSAGES CONTROL"]
disable = "duplicate-code,too-few-public-methods,useless-import-alias"

[tool.pytest.ini_options]
minversion = "6.2"
addopts = "-qq"
testpaths = ["py/flwr", "py/flwr_tool"]
filterwarnings = "ignore::DeprecationWarning"

[tool.pytest-watcher]
now = false
clear = true
delay = 0.2
runner = "pytest"
runner_args = ["-s", "-vvvvv"]
patterns = ["*.py"]
ignore_patterns = []

[tool.mypy]
plugins = ["numpy.typing.mypy_plugin"]
ignore_missing_imports = true
strict = true

[[tool.mypy.overrides]]
module = ["importlib.metadata.*", "importlib_metadata.*"]
follow_imports = "skip"
follow_imports_for_stubs = true
disallow_untyped_calls = false

[[tool.mypy.overrides]]
module = "torch.*"
follow_imports = "skip"
follow_imports_for_stubs = true

[tool.docformatter]
wrap-summaries = 88
wrap-descriptions = 88

[tool.ruff]
target-version = "py39"
line-length = 88
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "proto",
]

[tool.ruff.lint]
select = ["D", "E", "F", "W", "B", "ISC", "C4", "UP"]
fixable = ["D", "E", "F", "W", "B", "ISC", "C4", "UP"]
ignore = ["B024", "B027", "D205", "D209"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"py/flwr/server/strategy/*.py" = ["E501"]

[tool.docsig]
ignore-no-params = true
exclude = 'py/flwr/proto/.*|py/flwr/.*_test\.py|py/flwr/cli/new/templates/.*\.tpl'
