[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fedht"
version = "1.0.0"
description = "implementing FedHT"
license = "Apache-2.0"
dependencies = [
    "flwr==1.11.0",
    "flwr[simulation]>=1.9.0,<2.0",
    "flwr-datasets[vision]>=0.0.2,<1.0.0",
    "scikit-learn>=1.1.1",
    "numpy>=1.21.0",
    "matplotlib==3.9.2",
    "hydra-core==1.3.2",
    "torch==2.4.1",
    "torchvision>=0.19.1",
    "numpy>=1.26.4"
]

[project.optional-dependencies]
dev = [
    "isort==5.13.2",
    "black==24.2.0",
    "docformatter==1.7.5",
    "mypy==1.8.0",
    "pylint==3.2.6",
    "flake8==5.0.4",
    "pytest==6.2.4",
    "pytest-watch==4.2.0",
    "ruff==0.1.9",
    "types-requests==2.31.0.20240125",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = [
    "The Flower Authors <hello@flower.ai>",
    "Chancellor Johnstone <chancellor.johnstone@gmail.com>",
]

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 10
